# Adafruit_CircuitPython_AGS02MA

./: README.rst  adafruit_ags02ma.py  pyproject.toml  setup.py
docs/: api.rst  conf.py  examples.rst  index.rst
examples/: ags02ma_simpletest.py
